# TAMML---Tarea-1

./: .gitignore  Makefile  README.md  Talle2-CHATBO.docx  pyproject.toml  run_app.py
construccion_aplicativo/: README.md  tu_archivo_riopaila.txt
construccion_conocimiento/: README.md  reporte_instagram_posts_riopaila.txt  reporte_linkedin_posts_riopaila.txt  reporte_simev_riopaila.txt  unirtxt.py
construccion_conocimiento/proyecto_chatbot/: constructor_cerebro.py  scraper_instragram_riopaila.py  scraper_simev_riopaila.py  scraper_web_riopaila.py  scraping.py
data/knowledge/: riopaila_castilla.md  riopaila_castilla_clean.md
data/knowledge/pdfs/: CARTA MEDIDAS Y MECANISMOS ORIENTADOS A EVITAR PRACTICAS ILEGALES.md  Comunicado Hecho Relevante JCSB.md  Comunicado de hecho relevante - Comités de JD.md  Comunicado hecho relevante - Decisiones de JD (001).md  Convocatoria AGA Escisión.md  Convocatoria reunión extraordinaria AGA - 5 marzo_2026.md  INFORME DE SOSTENIBILIDAD Y GESTIÓN 2024 - RIOPAILA CASTILLA.md  Informe peródico trimestral (I TRIM) 2025 15.05.25 Compilado (001).md  Informe peródico trimestral (II TRIM) 2025 13.08.25 VFC.md  (+16 more)
interfaz_prueba/: README.md
pruebas/: README.md
rawdata/: Actividad del Módulo 1.docx  app_gradio.py  app_streamlit.py  contexto_optimizado.txt  contexto_riopaila_castilla.txt  contexto_riopaila_castilla2.txt  gemini_ai_generativa.py  historia_riopaila.py  importar_pdfs.py  langchain_groq  langchain_groq_20q  listar_modelos.py  ml_langchain.py  ml_langchain_gemini  prueba_genai.py  prueba_groq  redes_sociales_valentina.py  redes_sociales_valentina2.py  redes_sociales_valentina3.py  reporte_web_riopaila.txt
rawdata/Valentina/: depura_archivos.py
rawdata/Valentina/proyecto_chatbot/: main.py  pyproject.toml  scraper_linkedin_riopaila.py
reports/: reporte_historia_riopaila.txt  reporte_instagram_posts_riopaila.md  reporte_instagram_posts_riopaila.txt  reporte_linkedin_posts_riopaila.md  reporte_simev_riopaila.csv  reporte_simev_riopaila.md  reporte_web_riopaila.md
scripts/: clean_context.py  merge_reports.py
src/riopaila_chatbot/: app.py
src/riopaila_rag/: README.md  agent.py  agent_chat_pdf.py  app.py  chunking.py  config.py  ingest.py  kb.py  memory.py  paths.py
src/scripts/: README.md  clean_context.py  convert_pdfs.py  merge_reports.py
supabase/migrations/: 001_init.sql
supabase/seeds/: company_info.sql
(+8 files in other folders)
