[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riopaila_chatbot"]

[project]
name = "tamml-tarea-1"
version = "0.1.0"
description = "Asistente virtual corporativo de Riopaila Castilla — Q&A con LangChain + Groq + Gradio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-groq>=0.3",
    "langchain-core>=0.3",
    "gradio>=5.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "requests>=2.32",
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "pdfplumber>=0.11",
    "pandas>=2.0",
]

[project.scripts]
app = "riopaila_chatbot.app:demo.launch"
