[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riopaila_chatbot", "src/riopaila_rag"]

[project]
name = "tamml-tarea-1"
version = "0.1.0"
description = "Asistente virtual corporativo de Riopaila Castilla — Q&A con LangChain + Groq + Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-groq>=0.3",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "streamlit>=1.35",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "requests>=2.32",
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "pdfplumber>=0.11",
    "pandas>=2.0",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-postgres>=0.0.9",
    "psycopg[binary]>=3.1",
    "tiktoken>=0.7",
    "vecs>=0.4",
    "supabase==2.3.8",
    "httpx>=0.24,<0.26",
    "gotrue>=2.4,<2.5",
]

[project.scripts]
app = "run_app:main"
