[project]
name = "proyecto-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.16",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scrapy>=2.15.0",
    "selenium>=4.43.0",
    "unstructured>=0.18.32",
    "webdriver-manager>=4.0.2",
]
